--- a/core/MI/calendar/calendar.html
+++ b/core/MI/calendar/calendar.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Calendar</title>
+    <title>Calendar and Tasks</title>
 </head>
 
 <body>
@@ -13,6 +13,17 @@
         <li>
             <a href="{% url 'event_detail' event.pk %}">{{ event.title }}</a>
             ({{ event.start_time }} - {{ event.end_time }})
+        </li>
+        {% endfor %}
+    </ul>
+
+    <h1>Tasks</h1>
+    <a href="{% url 'task_create' %}">Create New Task</a>
+    <ul>
+        {% for task in tasks %}
+        <li>
+            <a href="{% url 'task_detail' task.pk %}">{{ task.title }}</a>
+            (Due: {{ task.due_date }}) {% if task.completed %}✔{% endif %}
         </li>
         {% endfor %}
     </ul>
